# orca-iot

./: .gitignore  Cargo.toml  LICENSE  README.md  readings.csv  run.bat
main/: main.ino  sketch.yaml
scripts/: build.bat  build.sh  run.bat  run.sh
src/: lib.rs  main.rs  parser.rs  serial.rs  utils.rs
tests/: parser_test.rs  slicer_test.rs  utils_test.rs
