[package]
name = "orca-iot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.0"
serial = "0.4"
nom = "7"
csv = "1.2.0"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
